Agregado de descripción a las cards

--- a/index.html
+++ b/index.html
@@ -152,10 +152,13 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>2 - 4 </b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                ¿Crees que tus amigos toman malas decisiones? Conocé nuevos
+                aspectos oscuros (muy oscuros) de tus amigos...
+              </li>
+              <li class="list-group-item mx-1">$4.990</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -178,10 +181,14 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">+ 2</p>
+                <p class="m-0"><b>+2 </b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                Disparador de encuentros festivos e íntimos, corporales y
+                emocionales. Las cartas buscan destapar estereotipos y
+                prejuicios...
+              </li>
+              <li class="list-group-item mx-1">$8.900</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -202,10 +209,13 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">+ 4</p>
+                <p class="m-0"><b>+ 4</b></p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                El Melómano es un juego de mesa para los amantes de la música.
+                ¡Quién primero consiga los 3 discos de Platino será el ganador!
+              </li>
+              <li class="list-group-item mx-1">$14.000</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -226,10 +236,14 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>2 - 8 </b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                Coloca el mazo en la mesa, saca una carta y ¡que comience el
+                juego! Si no haces lo que dice, como castigo, toma unos
+                tragos!!!
+              </li>
+              <li class="list-group-item mx-1">$4.700</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -250,10 +264,13 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>3 - 10 </b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                Juego de cartas de humor negro para pasar un divertido momento
+                con amigos o familia, en previas, juntadas y cumpleaños. +18
+              </li>
+              <li class="list-group-item mx-1">$5.400</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -274,11 +291,16 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>2 - 4</b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                Cada carta tiene una consigna para que fume uno, todos o
+                nadie.¡Gana el que después de varias rondas fuma la última
+                pitada! +18
+              </li>
+              <li class="list-group-item mx-1">$6.200</li>
             </ul>
+
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
         </div>
@@ -298,10 +320,14 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">+ 4</p>
+                <p class="m-0"><b>2 - 6 </b>(+12 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                ¡Poné a prueba tu inteligencia y táctica en la batalla por
+                conquistar el mundo! Cumplí las misiones y derribá a tus
+                oponentes...
+              </li>
+              <li class="list-group-item mx-1">$21.200</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -322,10 +348,13 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>3 - 10 </b>(+18 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+                Un juego para disfrutar de lo más hermoso que tiene la amistad:
+                LA MALDAD. Consignas llenas de venganza, sufrimiento y cringe...
+              </li>
+              <li class="list-group-item mx-1">$3.500</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -346,10 +375,14 @@
                   class="fa-solid fa-user fa-xl mt-2 mx-2"
                   style="color: #22a699"
                 ></i>
-                <p class="m-0">2 - 4</p>
+                <p class="m-0"><b>2 - 9 </b>(+15 años)</p>
               </li>
-              <li class="list-group-item mx-1">Características</li>
-              <li class="list-group-item mx-1">Precio</li>
+              <li class="list-group-item mx-1">
+               Poné a prueba tus habilidades y
+                conocimientos en distintas áreas, mientras compartís momentos
+                inolvidables con tus seres queridos
+              </li>
+              <li class="list-group-item mx-1">$15.850</li>
             </ul>
             <a href="#" class="btn btn-card">Comprar</a>
           </div>
@@ -361,10 +394,8 @@
     <footer class="text-white pt-5 pb-4">
       <div class="container text-center text-md-start">
         <div class="row text-center text-md-start">
-          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold">
-              Nosotros
-            </h5>
+          <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold">Nosotros</h5>
             <hr class="mb-4" />
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -373,7 +404,7 @@
               consequatur alias neque quos laboriosam asperiores.
             </p>
           </div>
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold">
               Dejanos ayudarte
             </h5>
@@ -392,10 +423,8 @@
             </p>
           </div>
 
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold">
-              Haz dinero
-            </h5>
+          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold">Haz dinero</h5>
             <hr class="mb-4" />
             <p>
               <a href="#">Vende productos en nuestro sitio</a>
@@ -409,9 +438,9 @@
             <p>
               <a href="#">Publica</a>
             </p>
-          </div>
+          </div> -->
 
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-tea-600">
               Contacto
             </h5>
@@ -420,45 +449,65 @@
               <li class="p-footer fa fa-home me-3">Spiro 65, Adrogue</li>
             </p>
             <p>
-              <li class="p-footer fa fa-envelope me-3">m.labarrere2@gmail.com</li>
+              <li class="p-footer fa fa-envelope me-3">
+                m.labarrere2@gmail.com
+              </li>
             </p>
             <p>
               <li class="p-footer fa fa-phone me-3">1131225993</li>
             </p>
-            <p>
-              <li class="p-footer fa fa-print me-3"> 1131225993</li>
-            </p>
           </div>
 
-          <hr class="mb-4" />
+          <div class="row">
+            <iframe
+              class="mb-4 mt-4"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.006816295196!2d-58.405711024442276!3d-34.80577036819679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd36dad3b5fe7%3A0x8cc70b8426da1e6d!2sSamuel%20Miguel%20Spiro%2065%2C%20B1846DUB%20Adrogu%C3%A9%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1692132858975!5m2!1ses-419!2sar"
+              width="400"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <!-- 
+          <hr class="mb-4" /> -->
 
           <div class="text-center mb-2">
             <p>
-              Todos los derechos reservados
-              <a href="#"
-                ><strong>Mailen Alvarez</strong></a
-              >
+              2023 - Todos los derechos reservados
+              <a href="#"><strong>Mailen Alvarez</strong></a>
             </p>
           </div>
 
           <div class="txt-center">
-<ul class="list-unstyled list-inline text-center">
-<li class="list-inline-item">
-  <a href="#" class="text-white"><i class="fab fa-facebook"></i></a>
-</li>
-<li class="list-inline-item">
-  <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
-</li>
-<li class="list-inline-item">
-  <a href="#" class="text-white"><i class="fab fa-google-plus"></i></a>
-</li>
-<li class="list-inline-item">
-  <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
-</li>
-<li class="list-inline-item">
-  <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
-</li>
-</ul>
+            <ul class="list-unstyled list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#" class="text-white"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white"
+                  ><i class="fab fa-google-plus"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="text-white"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
