agregado de search

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="pages/nosotros.html"
+                  href="./pages/nosotros.html"
                   >Nosotros</a
                 >
               </li>
@@ -70,21 +70,26 @@
             </ul>
           </div>
           <div class="d-flex">
+          
             <a href="pages/carrito.html" class="text-reset me-3"
-              ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
-            ></a>
+              > <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn " type="submit"><i
+                  class="fa-solid fa-magnifying-glass fa-lg"
+                  style="color: #ffffff"
+                ></i
+              ></button>
+              </form></a>
             <a href="pages/carrito.html" class="text-reset me-3"
-              ><i
-                class="fa-solid fa-magnifying-glass fa-lg"
-                style="color: #ffffff"
-              ></i
-            ></a>
+            ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
+          ></a>
             <a href="pages/carrito.html" class="text-reset me-3"
               ><i
                 class="fa-solid fa-heart fa-beat fa-lg"
                 style="color: #ffffff"
               ></i
-            ></a>
+            >
+          </a>
             <a href="pages/carrito.html" class="text-reset me-3">
               <i
                 class="fa-solid fa-cart-shopping fa-lg"
@@ -109,7 +114,7 @@
           <p>CUMPLE!</p>
         </div>
         <div
-          class="d-flex justify-content-center align-items-center mx-auto"
+          class="d-flex justify-content-center align-items-center mx-auto position-absolute end-50 bottom-0 my-2"
           style="
             background-color: #22a699;
             border: 4px solid white;
@@ -137,7 +142,7 @@
           <h2>Productos Destacados</h2>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/decisiones.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -166,7 +171,7 @@
 
         <!-- card col-3 m-3 -->
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/destapados.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -194,7 +199,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/el-melomano.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -221,7 +226,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/ni-en-pedo.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -249,7 +254,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/con-eso-no.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -276,7 +281,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/fumany.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -305,7 +310,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/teg.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -333,7 +338,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/t-kabio.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
@@ -360,7 +365,7 @@
           </div>
         </div>
 
-        <div class="card border-danger col-3 m-3">
+        <div class="card shadow-lg border-danger col-3 m-3">
           <img
             src="./public/img/ilustrado.jpg"
             class="card-img-top w-75 object-fit-contain h-75 mx-auto my-0"
