--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" async>
   </head>
 
   <body>
@@ -16,10 +17,7 @@
         <div class="container-fluid">
           <!-- /*GENERA SCROLL LATERAL */ -->
           <a class="navbar-brand" href="#"
-            ><img
-              width="170px"
-              src="./public/img/logo.png"
-              alt="logo"
+            ><img width="170px" src="./public/img/logo.png" alt="logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -69,27 +67,31 @@
               </li>
             </ul>
           </div>
-          <div class="d-flex">
-          
+          <div class="d-flex align-items-center">
+            <a href="pages/carrito.html" class="text-reset me-3">
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn" type="submit">
+                  <i
+                    class="fa-solid fa-magnifying-glass fa-lg"
+                    style="color: #ffffff"
+                  ></i>
+                </button></form
+            ></a>
             <a href="pages/carrito.html" class="text-reset me-3"
-              > <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn " type="submit"><i
-                  class="fa-solid fa-magnifying-glass fa-lg"
-                  style="color: #ffffff"
-                ></i
-              ></button>
-              </form></a>
-            <a href="pages/carrito.html" class="text-reset me-3"
-            ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
-          ></a>
+              ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
+            ></a>
             <a href="pages/carrito.html" class="text-reset me-3"
               ><i
                 class="fa-solid fa-heart fa-beat fa-lg"
                 style="color: #ffffff"
-              ></i
-            >
-          </a>
+              ></i>
+            </a>
             <a href="pages/carrito.html" class="text-reset me-3">
               <i
                 class="fa-solid fa-cart-shopping fa-lg"
@@ -142,9 +144,10 @@
           <h2>Productos Destacados</h2>
         </div>
 
-        <div id="cardsContainer" class="container-fluid d-flex flex-wrap justify-content-evenly mt-5 mb-5">
-        </div>
-
+        <div
+          id="cardsContainer"
+          class="container-fluid d-flex flex-wrap justify-content-evenly mt-5 mb-5"
+        ></div>
       </section>
     </main>
 
