--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,13 +8,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../css/style.css" async>
   </head>
 
   <body>
     <header>
       <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid">
-          <!-- /*GENERA SCROLL LATERAL */ -->
           <a class="navbar-brand" href="#"
             ><img width="170px" src="../public/img/logo.png" alt="logo"
           /></a>
@@ -36,7 +36,7 @@
                   class="nav-link active"
                   style="color: #ffffff"
                   aria-current="page"
-                  href="#"
+                  href="/index.html"
                   >Inicio</a
                 >
               </li>
@@ -44,7 +44,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="/dist/pages/nosotros.html"
+                  href="/pages/nosotros.html"
                   >Nosotros</a
                 >
               </li>
@@ -66,7 +66,7 @@
               </li>
             </ul>
           </div>
-          <div class="d-flex">
+          <div class="d-flex align-items-center">
             <a href="pages/carrito.html" class="text-reset me-3">
               <form class="d-flex">
                 <input
@@ -101,7 +101,7 @@
         </div>
       </nav>
     </header>
-    <main style="background-color: #F29727;">
+    <main style="background-color: #f29727">
       <section id="about">
         <div class="topContent">
           <div class="content">
@@ -113,7 +113,20 @@
             </p>
           </div>
           <div class="topImagesWrapper">
-            <img src="../public/img/us2.jpg" alt="" class="secondTopImage">
+            <img src="../public/img/us2.jpg" alt="" class="firstImage" />
+          </div>
+        </div>
+        <div class="botContent">
+          <div class="content">
+            <p>
+              ¿QUIEN NO HA JUGADO JUEGOS DE MESA DE PEQUEÑO? SOMOS UNA EMPRESA
+              CONVENCIDA DE QUE PODEMOS CONTINUAR CON LA DIVERSION MAS ALLA DE
+              LAS EDADES. PARA AQUELLOS AMANTES NOSTALGICOS DEL CALIDO ENCUENTRO
+              HUMANO DECIDIMOS CREAR UN ESPACIO...
+            </p>
+          </div>
+          <div class="topImagesWrapper">
+            <img src="../public/img/us3.jpg" alt="" class="secondImage" />
           </div>
         </div>
       </section>
