Finishes Nosotros page

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" async>
+    <link rel="stylesheet" href="../css/style.css" async />
   </head>
 
   <body>
@@ -101,37 +101,34 @@
         </div>
       </nav>
     </header>
-    <main style="background-color: #f29727">
-      <section id="about">
-        <div class="topContent">
-          <div class="content">
-            <p>
-              ¿QUIEN NO HA JUGADO JUEGOS DE MESA DE PEQUEÑO? SOMOS UNA EMPRESA
-              CONVENCIDA DE QUE PODEMOS CONTINUAR CON LA DIVERSION MAS ALLA DE
-              LAS EDADES. PARA AQUELLOS AMANTES NOSTALGICOS DEL CALIDO ENCUENTRO
-              HUMANO DECIDIMOS CREAR UN ESPACIO...
-            </p>
-          </div>
-          <div class="topImagesWrapper">
-            <img src="../public/img/us2.jpg" alt="" class="firstImage" />
+
+    <main>
+      <section id="hero">
+        <div class="heroMainContainer">
+          <h1 class="heroTitle">
+            Porque nosotros conservamos el amor por un buen juego de mesa
+          </h1>
+          <div class="heroImageContainer">
+            <img
+              src="../public/img/nosotrosHero.png"
+              alt=""
+              class="heroImage"
+            />
           </div>
         </div>
-        <div class="botContent">
-          <div class="content">
-            <p>
-              ¿QUIEN NO HA JUGADO JUEGOS DE MESA DE PEQUEÑO? SOMOS UNA EMPRESA
-              CONVENCIDA DE QUE PODEMOS CONTINUAR CON LA DIVERSION MAS ALLA DE
-              LAS EDADES. PARA AQUELLOS AMANTES NOSTALGICOS DEL CALIDO ENCUENTRO
-              HUMANO DECIDIMOS CREAR UN ESPACIO...
-            </p>
+      </section>
+      <section id="values">
+        <div class="valuesContainer">
+          <div class="valuesTitleContainer">
+            <h2 class="valuesTitle">Unite a nuestra hermosa comunidad</h2>
+            <h4 class="valuesSubTitle">Conocé nuestros valores</h4>
           </div>
-          <div class="topImagesWrapper">
-            <img src="../public/img/us3.jpg" alt="" class="secondImage" />
+          <div id="valuesWrapper">
+          
           </div>
         </div>
       </section>
     </main>
-    <main></main>
 
     <!-- Footer -->
     <footer class="text-white pt-5 pb-4">
@@ -256,7 +253,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/nosotros.js"></script>
   </body>
 </html>
 
