--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,40 +3,117 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <title>Proyecto Integrador - Etapa 1 (Contacto)</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <title>En un cumple!</title>
   </head>
   <body>
-
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Tienda EIT</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- /*GENERA SCROLL LATERAL */ -->
+          <a class="navbar-brand" href="#"
+            ><img width="170px" src="./public/img/logo.png" alt="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a
+                  class="nav-link active"
+                  style="color: #ffffff"
+                  aria-current="page"
+                  href="#"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a
+                  class="nav-link"
+                  style="color: #ffffff"
+                  href="./pages/nosotros.html"
+                  >Nosotros</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a
+                  class="nav-link"
+                  style="color: #ffffff"
+                  href="pages/nosotros.html"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: #ffffff"
+                  href="pages/contacto.html"
+                  >Contacto</a
+                >
               </li>
             </ul>
           </div>
-          <div class="d-flex">
-            <a href="carrito.html" class="text-reset me-3">
-              <i class="fa-solid fa-cart-shopping"></i>
-          </a>
+          <div class="d-flex align-items-center">
+            <a href="pages/carrito.html" class="text-reset me-3">
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn" type="submit">
+                  <i
+                    class="fa-solid fa-magnifying-glass fa-lg"
+                    style="color: #ffffff"
+                  ></i>
+                </button></form
+            ></a>
+            <a href="pages/carrito.html" class="text-reset me-3"
+              ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
+            ></a>
+            <a href="pages/carrito.html" class="text-reset me-3"
+              ><i
+                class="fa-solid fa-heart fa-beat fa-lg"
+                style="color: #ffffff"
+              ></i>
+            </a>
+            <a href="pages/carrito.html" class="text-reset me-3">
+              <i
+                class="fa-solid fa-cart-shopping fa-lg"
+                style="color: #ffffff"
+              ></i>
+            </a>
           </div>
         </div>
       </nav>
     </header>
-   
-    <script type="module" src="/main.js"></script>
+
+    <div class="contactContainer">
+      <h2 class="formTitle">¿Cómo podemos ayudarte?</h2>
+      <form id="contact" action="">
+        <label for="name">Nombre Completo</label>
+        <input name="name" type="text" />
+        <label for="email">Email</label>
+        <input name="email" type="email" />
+        <label for="message">Mensaje</label>
+        <input name="message" type="text" />
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+
+    <script type="module" src="/contacto.js"></script>
   </body>
 </html>
