--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -60,7 +60,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="pages/contacto.html"
+                  href="/pages/contacto.html"
                   >Contacto</a
                 >
               </li>
@@ -137,7 +137,7 @@
               EDADES. PARA AQUELLOS AMANTES NOSTÁLGICOS DEL CÁLIDO ENCUENTRO
               HUMANO DECIDIMOS CREAR UN ESPACIO ATEMPORAL DONDE......
             </p>
-            <img class="nostalgicImage" src="../public/img/us2.jpg" alt="" />
+            <img class="nostalgicImage" src="../public/img/us4.jpg" alt="" />
           </div>
         </div>
       </section>
