--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,7 +37,7 @@
                   class="nav-link active"
                   style="color: #ffffff"
                   aria-current="page"
-                  href="#"
+                  href="../index.html"
                   >Inicio</a
                 >
               </li>
@@ -45,7 +45,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="./pages/nosotros.html"
+                  href="./nosotros.html"
                   >Nosotros</a
                 >
               </li>
@@ -53,7 +53,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="pages/nosotros.html"
+                  href="#"
                   >Productos</a
                 >
               </li>
@@ -61,7 +61,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="pages/contacto.html"
+                  href="./contacto.html"
                   >Contacto</a
                 >
               </li>
